[package]
name = "jcss-cli"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.19", features = ["derive"] }
image = "0.24"
jcss = { version = "0.1", path = "../jcss" }

[dev-dependencies]
assert_cmd = "2.0"
rstest = "0.17"
tempfile = "3.6"