[package]
name = "jcss-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"
actix-multipart = "0.4.0-beta.8"
futures-util = "0.3"
jcss = { version = "0.1", path = "../jcss" }
image = "0.23"
tracing = "0.1"
tracing-actix-web = "0.5.0-beta.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3"
bytes = "1.1"