[package]
name = "jcss-web"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.4.0-beta.12"
actix-web = "4.0.0-beta.14"
bytes = "1.1"
futures-util = "0.3"
image = "0.23"
jcss = { version = "0.1", path = "../jcss" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-actix-web = "0.5.0-beta.11"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
attohttpc = { version = "0.18.0", default-features = false, features=["multipart-form", "json"] }
tempfile = "3.3"