[package]
name = "jcss-web"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.0"
actix-web = "4.3.1"
bytes = "1.4"
futures-util = "0.3"
image = "0.24"
jcss = { version = "0.1", path = "../jcss" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-actix-web = "0.7.6"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
attohttpc = { version = "0.26.0", default-features = false, features=["multipart-form", "json"] }
tempfile = "3.8"