[package]
name = "jcss"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
ndarray = "0.15"
nshare = { version = "0.9", default-features = false, features = ["ndarray", "image"] }
tracing = "0.1"
tract-onnx = "0.17"

[dev-dependencies]
rstest = "0.14"